# tax-calc-rust

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint
