[package]
name = "tax-calc"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "A Desktop app that calculates tax, owner, profit and opex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"

[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.ghostgamer6969.tax-calc"
